--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Derek Tomassi!</h1>
-  <a href="https://www.google.com">Assignment 0</a>
+  <a href="https:www.google.com">Assignment 0</a>
 </body>
 </html>
