Adding Image and Updated Assignment0.html

--- a/Assignment0.html
+++ b/Assignment0.html
@@ -3,5 +3,34 @@
     <head><title>Assignment 0</title></head>
     <body>
         <h1>Assignment 0</h1>
+        <h3>My Favorite Musical Artists</h3>
+        <img src="Artists.xcf" width="1920" height="1080" border="0" usemap="#map" />
+
+        <map name="map">
+        <!-- #$-:Image map file created by GIMP Image Map plug-in -->
+        <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
+        <!-- #$-:Please do not edit lines starting with "#$" -->
+        <!-- #$VERSION:2.3 -->
+        <!-- #$AUTHOR:derek -->
+        <area shape="rect" coords="28,19,529,514" alt="Da Tweekaz" target="audio" href="file:/" />
+        <area shape="rect" coords="708,19,1204,514" alt="Sub Zero Project" target="audio" href="file:/" />
+        <area shape="rect" coords="1360,17,1858,515" alt="Sefa" target="audio" href="file:/" />
+        <area shape="rect" coords="355,615,892,946" alt="Gammer" target="audio" href="file:/" />
+        <area shape="rect" coords="1094,548,1594,1045" alt="Virtual Self" target="audio" href="file:/" />
+        </map>
+
+        <h3>Web Page Inspirations</h3>
+        <ul>
+            <li><a href="https://www.littlecutiedotgov.com/">1</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">2</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">3</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">4</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">5</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">6</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">7</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">8</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">9</a></li>
+            <li><a href="https://www.littlecutiedotgov.com/">10</a></li>
+        </ul>
     </body>
 </html>
