--- a/Assignment0.html
+++ b/Assignment0.html
@@ -4,7 +4,7 @@
     <body>
         <h1>Assignment 0</h1>
         <h3>My Favorite Musical Artists</h3>
-        <img src="Artists.xcf" width="1920" height="1080" border="0" usemap="#map" />
+        <img src="Artists.png" width="1920" height="1080" border="0" usemap="#map" />
 
         <map name="map">
         <!-- #$-:Image map file created by GIMP Image Map plug-in -->
