Added About Me Paragraph

--- a/Assignment0.html
+++ b/Assignment0.html
@@ -32,5 +32,8 @@
             <li><a href="https://www.littlecutiedotgov.com/">9</a></li>
             <li><a href="https://www.littlecutiedotgov.com/">10</a></li>
         </ul>
+
+        <h3>About Me</h3>
+        <p>I'm Derek Tomassi. I make my own music in my free time (EDM) and plan on going into Software Engineering & Web Dev after graduation.</p>
     </body>
 </html>
