Edited URL's in Assignment 0

--- a/Assignment0.html
+++ b/Assignment0.html
@@ -21,16 +21,16 @@
 
         <h3>Web Page Inspirations</h3>
         <ul>
-            <li><a href="https://www.littlecutiedotgov.com/">1</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">2</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">3</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">4</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">5</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">6</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">7</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">8</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">9</a></li>
-            <li><a href="https://www.littlecutiedotgov.com/">10</a></li>
+            <li><a href="https://www.google.com">1</a></li>
+            <li><a href="https://www.google.com">2</a></li>
+            <li><a href="https://www.google.com">3</a></li>
+            <li><a href="https://www.google.com">4</a></li>
+            <li><a href="https://www.google.com">5</a></li>
+            <li><a href="https://www.google.com">6</a></li>
+            <li><a href="https://www.google.com">7</a></li>
+            <li><a href="https://www.google.com">8</a></li>
+            <li><a href="https://www.google.com">9</a></li>
+            <li><a href="https://www.google.com">10</a></li>
         </ul>
 
         <h3>About Me</h3>
