Fixed About Me and Completed Webpage Inspirations

--- a/Assignment0.html
+++ b/Assignment0.html
@@ -21,19 +21,19 @@
 
         <h3>Web Page Inspirations</h3>
         <ul>
-            <li><a href="https://www.google.com">1</a></li>
-            <li><a href="https://www.google.com">2</a></li>
-            <li><a href="https://www.google.com">3</a></li>
-            <li><a href="https://www.google.com">4</a></li>
-            <li><a href="https://www.google.com">5</a></li>
-            <li><a href="https://www.google.com">6</a></li>
-            <li><a href="https://www.google.com">7</a></li>
-            <li><a href="https://www.google.com">8</a></li>
-            <li><a href="https://www.google.com">9</a></li>
-            <li><a href="https://www.google.com">10</a></li>
+            <li><a href="https://porterrobinson.com/">Porter Robinson</a></li>
+            <li><a href="https://martingarrix.com/">Martin Garrix</a></li>
+            <li><a href="http://datweekaz.com/">Da Tweekaz</a></li>
+            <li><a href="https://brittanychiang.com/">Brittany Chiang</a></li>
+            <li><a href="http://www.garysheng.com/">Gary Sheng</a></li>
+            <li><a href="https://brandoncjohnson.com/">Brandon Johnson</a></li>
+            <li><a href="https://timroussilhe.com/">Timothee Roussilhe</a></li>
+            <li><a href="https://www.adamhartwig.co.uk/">Adam Hartwig</a></li>
+            <li><a href="hhttp://marty.com/">Marty</a></li>
+            <li><a href="https://www.adhamdannaway.com/">Adham Dannaway</a></li>
         </ul>
 
         <h3>About Me</h3>
-        <p>I'm Derek Tomassi. I make my own music in my free time (EDM) and plan on going into Software Engineering & Web Dev after graduation.</p>
+        <p>I'm Derek Tomassi I am currently a Computer Science major at Bridgewater State University. I plan on going into software engineering and web development after graduation. In my free time I like to make my own music (EDM) and it is a dream for that to become a full-time job.</p>
     </body>
 </html>
