Added Audio Clips and HREF to Audio

--- a/Assignment0.html
+++ b/Assignment0.html
@@ -4,6 +4,7 @@
     <body>
         <h1>Assignment 0</h1>
         <h3>My Favorite Musical Artists</h3>
+        <p>This is one image source with 5 area tags. Click on one the artists to hear one of their songs.</p>
         <img src="Artists.png" width="1920" height="1080" border="0" usemap="#map" />
 
         <map name="map">
@@ -12,11 +13,11 @@
         <!-- #$-:Please do not edit lines starting with "#$" -->
         <!-- #$VERSION:2.3 -->
         <!-- #$AUTHOR:derek -->
-        <area shape="rect" coords="28,19,529,514" alt="Da Tweekaz" target="audio" href="file:/" />
-        <area shape="rect" coords="708,19,1204,514" alt="Sub Zero Project" target="audio" href="file:/" />
-        <area shape="rect" coords="1360,17,1858,515" alt="Sefa" target="audio" href="file:/" />
-        <area shape="rect" coords="355,615,892,946" alt="Gammer" target="audio" href="file:/" />
-        <area shape="rect" coords="1094,548,1594,1045" alt="Virtual Self" target="audio" href="file:/" />
+        <area shape="rect" coords="28,19,529,514" alt="Da Tweekaz" target="audio" href="Audio/DaTweekazAudio.mp3" />
+        <area shape="rect" coords="708,19,1204,514" alt="Sub Zero Project" target="audio" href="Audio/SubZeroAudio.mp3" />
+        <area shape="rect" coords="1360,17,1858,515" alt="Sefa" target="audio" href="Audio/SefaAudio.mp3" />
+        <area shape="rect" coords="355,615,892,946" alt="Gammer" target="audio" href="Audio/GammerAudio.mp3" />
+        <area shape="rect" coords="1094,548,1594,1045" alt="Virtual Self" target="audio" href="Audio/VirtualSelfAudio.mp3" />
         </map>
 
         <h3>Web Page Inspirations</h3>
