Fixing Audio Playing Issues

--- a/Assignment0.html
+++ b/Assignment0.html
@@ -20,6 +20,8 @@
         <area shape="rect" coords="1094,548,1594,1045" alt="Virtual Self" target="audio" href="Audio/VirtualSelfAudio.mp3" />
         </map>
 
+        <iframe name="audio" style="display:none;"></iframe>
+
         <h3>Web Page Inspirations</h3>
         <ul>
             <li><a href="https://porterrobinson.com/">Porter Robinson</a></li>
