Testing new ssh key

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1>Derek Tomassi!</h1>
   <a href="Assignment0.html">Assignment 0</a>
+  <a href="www.google.com">Exercises</a>
 </body>
 </html>
