Added In-Class Exercises to the Website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
 <body>
   <h1>Derek Tomassi!</h1>
   <a href="Assignment0.html">Assignment 0</a>
-  <a href="www.google.com">Exercises</a>
-</body>
+  <a href="Exercises/Exercises.html"></a>
 </html>
