Added In-Class Exercises to the Website

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 <body>
   <h1>Derek Tomassi!</h1>
   <a href="Assignment0.html">Assignment 0</a>
-  <a href="Exercises/Exercises.html"></a>
+  <br><a href="Exercises/Exercises.html">Exercises</a>
 </html>
