--- a/Exercises/Exercises.html
+++ b/Exercises/Exercises.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>In Class Exercises</h1>
-  <a href="www.google.com">CSS Exercise</a>
+  <a href="https://www.google.com">CSS Exercise</a>
 </body>
 </html>
