Created Better Organization for the Assignments

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Derek Tomassi!</h1>
-  <a href="Assignment0.html">Assignment 0</a>
+  <a href="Assignments/Assignment0/Assignment0.html">Assignment 0</a>
   <br><a href="Exercises/Exercises.html">Exercises</a>
 </html>
