Added Bootstrap Exercise

--- a/Exercises/Exercises.html
+++ b/Exercises/Exercises.html
@@ -6,6 +6,6 @@
 <body>
   <h1>In Class Exercises</h1>
   <a href="CSSExercise/index.html">CSS Exercise</a>
-  <a href="BootstrapExercise/bootstrapEX/exercise.html">Boostrap Exercise</a>
+  <br><a href="BootstrapExercise/bootstrapEX/exercise.html">Boostrap Exercise</a>
 </body>
 </html>
