Added JavaScript Class Examples

--- a/Exercises/BootstrapExercise/bootstrapEX/exercise.html
+++ b/Exercises/BootstrapExercise/bootstrapEX/exercise.html
@@ -11,13 +11,13 @@
     <h1>Bridgewater History</h1>
   </header>
 
-  <div>
-
-      <div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg">
         <img  src="images/BSU1.jpg">
         <img  src="images/BSU2.jpg">
       </div>
-      <div>
+      <div> 
         <p>
     			Horace Mann, the first Massachusetts secretary of education and a key figure in national reform efforts, is an excellent example of the multifaceted approach taken by education reformers. Mann was not an expert in the field of education when he was appointed to the Board of Education but was far better known as a lawyer and member of the Massachusetts Legislature.
     	  </p>
