--- a/Exercises/BootstrapExercise/bootstrapEX/exercise.html
+++ b/Exercises/BootstrapExercise/bootstrapEX/exercise.html
@@ -2,13 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <style>
+    @media only screen and (max-width:720px)
+    {
+      img {display: none; }
+    }
+  </style>
 
+  <title>Bootstrap Example</title>
 </head>
 <body>
   <header>
-    <h1>Bridgewater History</h1>
+    <h1 class="text-center">Bridgewater History</h1>
   </header>
 
   <div class="container">
@@ -17,7 +25,7 @@
         <img  src="images/BSU1.jpg">
         <img  src="images/BSU2.jpg">
       </div>
-      <div> 
+      <div class="col-lg"> 
         <p>
     			Horace Mann, the first Massachusetts secretary of education and a key figure in national reform efforts, is an excellent example of the multifaceted approach taken by education reformers. Mann was not an expert in the field of education when he was appointed to the Board of Education but was far better known as a lawyer and member of the Massachusetts Legislature.
     	  </p>
@@ -25,7 +33,7 @@
     			Nicholas Tillinghast, the first principal of the Bridgewater Normal School, was born in Taunton, Massachusetts, on September 22, 1804. He attended West Point (1820-1824), taught for a time at Boston English High School and, prior to his Bridgewater experience, served as an assistant to Samuel Newman, principal of Barre Normal School in Massachusetts. A pioneer in education reform and a formidable leader, Tillinghast guided Bridgewater Normal School through its first 13 years.
     		</p>
       </div>
-      <div>
+      <div class="col-lg">
         <p>
     			Marshall Conant appointed second principal of Bridgewater State Normal School. Born in Pomfret, VT, on January 5, 1801, Marshall Conant began his teaching career in a district school. At a very young age, he developed an interest in mechanics, astronomy and mathematics. Years later, as principal of the Bridgewater Normal School, he pushed the school in a more scientific direction with an emphasis on science and mathematics. He also laid the groundwork for a future building program.
       	</p>
@@ -34,6 +42,8 @@
     		</p>
       </div>
 
+
+    </div>
     <footer>
       © 2016 by Bridgewater State University. All Rights Reserved.
     </footer>
