Restructured JS Examples and Added Navigation

--- a/Exercises/Exercises.html
+++ b/Exercises/Exercises.html
@@ -7,6 +7,6 @@
   <h1>In Class Exercises</h1>
   <a href="CSSExercise/index.html">CSS Exercise</a>
   <br><a href="BootstrapExercise/bootstrapEX/exercise.html">Boostrap Exercise</a>
-  <br><a href="JavaScriptExercise/4.JavaScriptExamples/basic.html">JavaScript Exercise</a>
+  <br><a href="JavaScriptExercise/JavaScriptExamplesNavigator.html">JavaScript Exercise</a>
 </body>
 </html>
