Added Missing Body Tags

--- a/Exercises/JavaScriptExercise/4.JavaScriptExamples/JSExamples.html
+++ b/Exercises/JavaScriptExercise/4.JavaScriptExamples/JSExamples.html
@@ -10,4 +10,5 @@
   <br><a href="node0.html">Node0</a>
   <br><a href="node1.html">Node1</a>
   <br><a href="forms.html">Forms</a>
+</body>
 </html>
