--- a/Exercises/JavaScriptExercise/JavaScriptExamplesNavigator.html
+++ b/Exercises/JavaScriptExercise/JavaScriptExamplesNavigator.html
@@ -7,4 +7,5 @@
   <h1>JavaScript In-Class Exercises and Examples</h1>
   <a href="4.JavaScriptExamples/JSExamples.html">Examples</a>
   <br><a href="JavaScriptExercises/JSExercise.html">Exercises</a>
+</body>
 </html>
