Testing VS Code GUI

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>My Webpage</title>
 </head>
 <body>
-  <h1>Derek Tomassi!</h1>
+  <h1>Derek Tomassi!!</h1>
   <a href="Assignments/Assignment0/Assignment0.html">Assignment 0</a>
   <br><a href="Exercises/Exercises.html">Exercises</a>
 </body>
