--- a/Assignments/Assignment2/Assignment2.html
+++ b/Assignments/Assignment2/Assignment2.html
@@ -2,8 +2,12 @@
 <html>
     <head>
         <title>Homepage</title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+        <script src="https://kit.fontawesome.com/f4a65582f6.js" crossorigin="anonymous"></script>
 
         <style>
             @media only screen and (max-width:720px)
@@ -14,29 +18,32 @@
     </head>
     <body>
       <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFFFFF;">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">About</span></a>
-                <a class="nav-item nav-link" href="#">Expierence</a>
-                <a class="nav-item nav-link" href="#">WebDev Class</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
-                
-                <button class="btn btn-outline-success" type="button" id="resume">Resume</button>
-              </div>
-            </div>
-          </nav>
-
-          <div class="container">
+      <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+        <a class="navbar-brand" href="#">Derek Tomassi Jr</a>
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a class="nav-link" href="#scrollspyHeading1">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#scrollspyHeading2">Expierence</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#scrollspyHeading3">WebDev Class</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#scrollspyHeading4">Contact</a>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-success" id="resume">Resume</button>
+          </li>
+        </ul>
+      </nav>
+          <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="container" tabindex="0">
             <!--About Me Row-->
-            <div class="row">
+            <div class="row justify-content-center" id="scrollspyHeading1">
               <!--Heading for About Me-->
               <div class="row">
-                <h1>About Me!</h1>
+                <h1><i class="fa-regular fa-face-grin-beam"></i> About Me!</h1>
               </div>
               <!--About Me Content-->
               <div class="row">
@@ -51,7 +58,7 @@
                        to create Discord Bots to trying game development in Unity I found what I found myself enjoying the most was Web Development.</p>
                   </div>
                   <div class="col-lg">
-                    <p>Also in another passion of mine is music creation and have extensive knowledge in Digital Audio Workstations such as FL Studio 2</p>
+                    <p>Also in another passion of mine is music creation and have extensive knowledge in Digital Audio Workstations such as FL Studio 20</p>
                   </div>
                 </div>
                 <!--Programming Skills-->
@@ -71,32 +78,101 @@
               </div>
             </div>
             <!--Expierence Row-->
-            <div class="row">
+            <div class="row justify-content-center" id="scrollspyHeading2">
               <!--Heading for Expierence-->
               <div class="row">
-                <h1>Expierence</h1>
+                <h1><i class="fa-solid fa-briefcase"></i> Expierence</h1>
               </div>
               <!--Expirence Content-->
               <div class="row">
-                <div class="col-lg">
-                  <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Dropdown button
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Discord Bot Development
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Software Engineering Python Project
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Java Swing GUI Development
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Unity 2D/3D Game Development
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFive">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        UNIX Operating System
+                      </button>
+                    </h2>
+                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-lg">
-                  <h3 id="expierenceHeading"></h3>
-                  <ul>
-                    <li id="expierenceBullet1"></li>
-                    <li id="expierenceBullet2"></li>
-                    <li id="expierenceBullet3"></li>
-                  </ul>
+              </div>
+            </div>
+            <br>
+            <!--WebDev Class Row-->
+            <div class="row justify-content-center" id="scrollspyHeading3">
+              <!--Heading for WebDev Class-->
+              <div class="row">
+                <h1><i class="fa-regular fa-file-code"></i> WebDev Class</h1>
+              </div>
+              <!--WebDev Class Content-->
+              <div class="row">
+                <!--Assignment 0-->
+                <div class="row">
+                  <h2>Assignment 0 - Area Maps</h2>
+                </div>
+                <div class="row">
+                  <div class="col-lg">
+                    <a href="#">
+                      <img alt="Assignment0 Image" src="Assignment0Image.png" width="500" height="500">
+                    </a>
+                  </div>
+                  <div class="col-lg">
+                    <p>In this assignment we were tasked to create and image area map with 5 clickable areas. I chose to use pictures of my 5 favorite muscic artists. I then had to put an about
+                      me sections followed by listing 10 inspirational websites.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
