Edited Expierence Info

--- a/Assignments/Assignment2/Assignment2.html
+++ b/Assignments/Assignment2/Assignment2.html
@@ -94,7 +94,18 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <p>In this project I created a bot for <strong>Discord</strong> using the <strong>DiscordPy API</strong>. The bot was made to create events for servers. A user would create
+                        an event and give it a title, user count, time and date, and optionally a game to associate with the event. After the event was created users could use commands in the text
+                        channel to join the event if the event hadn't already occured or if the event wasn't full. At the time of the event the bot would ping joined users that the event has
+                        started and a voice channel to join.</p>
+                        <p>Skills used for this project: </p>
+                        <ul>
+                          <li>Using an existing API and Documentation</li>
+                          <li>Using Conda Library and Python</li>
+                          <li>Interacting with a website (Discord)</li>
+                          <li>User testing</li>
+                          <li>Project Planning (Trello)</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -106,7 +117,19 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <p>This project was conducted during my Software Engineering class. The task was to create a program for a fictional client which in this case was a university. The program
+                          was used for managing and maintaining student information, staff information, and course information. You were able to create, delete, and edit information for all three
+                          different categories (student, faculty, and course). This project was done in a group of 4 with my focus handling the course information of the project. <a href="https://github.com/Maximus3333/north_star_project">The
+                          project can be found on my classmates github.</a>
+                        </p>
+                        <p>Skills used for this project: </p>
+                        <ul>
+                          <li>Holding weekly SCRUM Meetings</li>
+                          <li>Creating Use Cases</li>
+                          <li>Create Object Models</li>
+                          <li>Using GitHub collaboratively with others</li>
+                          <li>Code Review</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -118,7 +141,7 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <p>This project was done for my Senior project for my Computer and Information Systems class. I chose for my project to create a </p>
                       </div>
                     </div>
                   </div>
