--- a/Assignments/Assignment2/Assignment2.html
+++ b/Assignments/Assignment2/Assignment2.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
         <script src="https://kit.fontawesome.com/f4a65582f6.js" crossorigin="anonymous"></script>
@@ -101,7 +102,7 @@
                         <p>Skills used for this project: </p>
                         <ul>
                           <li>Using an existing API and Documentation</li>
-                          <li>Using Conda Library and Python</li>
+                          <li>Python Coding</li>
                           <li>Interacting with a website (Discord)</li>
                           <li>User testing</li>
                           <li>Project Planning (Trello)</li>
@@ -141,7 +142,17 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <p>This project was done for my Senior project for my Computer and Information Systems class. I chose for my project to create a </p>
+                        <p>This project was done for my Senior project for my Computer and Information Systems class. I chose for my project to create a program for employee scheduling for a company.
+                         What the program would do would be to create Employee objects that you could then schedule for the week. The Program would then be able to display the weekly calendar for all
+                         the active employees.
+                        </p>
+                        <p>Skills used for this project: </p>
+                        <ul>
+                          <li>Java Programming</li>
+                          <li>Using Java Swing Library</li>
+                          <li>GUI Design</li>
+                          <li>Presenting Code to Others</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -153,7 +164,16 @@
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <p>This project was done with a couple of my friends for something to do over the summer for fun. We ended up learning how to make small 2D and 3D games in the Unity Engine through tutorials
+                          on YouTube and Udemy. Using the engine we worked together using the Unity Calloborate tool and made some very small games to get us some expierence in the game development world.
+                        </p>
+                        <p>Skills used for this project: </p>
+                        <ul>
+                          <li>C# Programming</li>
+                          <li>Using Unity Library</li>
+                          <li>Collaborating with Non-Progammers</li>
+                          <li>Using a Game Engine</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -165,7 +185,16 @@
                     </h2>
                     <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <p>This project was done for my Operating Systems class. Over the course of the semester we slowly went through step by step and recreated an Operating System from scratch in Linux. The goal
+                          for the end of the project was to end up with results close to the power of the original UNIX operating system. This was made using bare minimum c coding with no librarys other than 
+                          the ones provided in assembly.
+                        </p>
+                        <p>Skills used for this project: </p>
+                        <ul>
+                          <li>C Programming</li>
+                          <li>Troubleshooting Code</li>
+                          <li>Low-Level Programming</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -193,14 +222,37 @@
                   </div>
                   <div class="col-lg">
                     <p>In this assignment we were tasked to create and image area map with 5 clickable areas. I chose to use pictures of my 5 favorite muscic artists. I then had to put an about
-                      me sections followed by listing 10 inspirational websites.
+                      me sections followed by listing 10 inspirational websites. <br>
+                      Skills Learned: <br>
+                      <ul>
+                        <li>HTML Basics</li>
+                        <li>Creating Area Maps</li>
+                        <li>Linked Audio</li>
+                        <li>Researching Other Websites</li>
+                      </ul>
                     </p>
                   </div>
                 </div>
               </div>
             </div>
+            <br>
+            <!--Contact Row-->
+            <div class="row justify-content-center" id="scrollspyHeading4">
+              <!--Heading for Contact Row-->
+              <div class="row">
+                <h1><i class="fa-solid fa-address-book"></i>Contact</h1>
+              </div>
+              <!--Contact Content-->
+              <div class="row">
+                <h3>I'm Currently Looking for Software Engineering Internships</h3>
+                <p>Please feel free to contact me via email or LinkedIn for any work opportunities</p>
+                <br>
+                <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:derektomassi@me.com" class="contactLink">Email</a></h4>
+                <h4><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/derek-t-a81447209/" class="contactLink">Linkedin</a></h4>
+                <h4><i class="fa-brands fa-github"></i> <a href="https://github.com/DerekTomassiJr" class="contactLink">GitHub</a></h4>
+              </div>
+            </div>
           </div>
-
           <script src="homepage.js"></script>
     </body>
 </html>
